change dataset filename while extracting

--- a/extract.ipynb
+++ b/extract.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     "        print(f\"Extracted all files to {extract_to}\")\n",
     "\n",
     "# Example usage\n",
-    "zip_path = \"cat-face-dataset.zip\"\n",
+    "zip_path = \"cats-faces-64x64-for-generative-models.zip\"\n",
     "extract_to = \"dataset\"\n",
     "\n",
     "extract_zip(zip_path, extract_to)\n"
